examples/errors/parsing/sort-lparen-bad.cn
fun f : ( -> Int [pure] = {
  n -> n
}

main : () [impure] = ()
